algunos ajustes, docs
